Thu Feb 15 18:42:49 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c,languages/steminternal.cc,
	  languages/steminternal.h: Tweak the "grouping" functions to allow
	  skipping past multiple occurences and use this to implement "goto"
	  or "gopast" followed by a grouping or "non" grouping more
	  efficiently.

Thu Feb 15 17:57:43 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c,languages/steminternal.cc,
	  languages/steminternal.h: Inline lose_s().  Since lose_s()
	  checks if p is NULL, remove checks prior to calling lose_s().
	* languages/steminternal.h: Cast from symbol * to int * via
	  void * to try to suppress over-eager warnings about alignment.

Thu Feb 15 12:43:04 GMT 2007  Olly Betts <olly@survex.com>

	* languages/stem.cc: Add support for two letter ISO 639 codes.

Thu Feb 15 10:40:40 GMT 2007  Olly Betts <olly@survex.com>

	* docs/Makefile.am: Don't try to ship mkdoc.pl.

Thu Feb 15 09:58:48 GMT 2007  Olly Betts <olly@survex.com>

	* docs/gen_codestructure_doc.in: Fix to work in a VPATH build.

Thu Feb 15 09:54:55 GMT 2007  Olly Betts <olly@survex.com>

	* languages/compiler/generator.c: Fix Stem::get_description() to
	  return the right string.

Thu Feb 15 09:44:54 GMT 2007  Olly Betts <olly@survex.com>

	* docs/gen_codestructure_doc.in: Add links to viewvcs on
	  svn.xapian.org.

Thu Feb 15 09:26:07 GMT 2007  Olly Betts <olly@survex.com>

	* configure.ac,docs/Makefile.am,docs/gen_codestructure_doc.in,
	  docs/mkdoc.pl,preautoreconf: Rework how code_structure.html
	  is generated.  Nicer output, and the html document is now
	  regenerated if any of the dir_contents files change.

Thu Feb 15 07:43:39 GMT 2007  Olly Betts <olly@survex.com>

	* Makefile.am,bin/Makefile.mk,configure.ac,examples/Makefile.mk,
	  makemanpage.in: Add "makemanpage" script which takes care of all
	  the magic needed to generate a man page using help2man.  This
	  script is written in perl, but so is help2man, and they're both