@@ -1,3 +1,9 @@
+Thu Feb 15 19:37:26 GMT 2007  Olly Betts <olly@survex.com>
+
+	* queryparser/queryparser.lemony,tests/queryparsertest.cc: Keep
+	  embedded apostrophe's in terms rather than generating a phrase
+	  search for them.
+
 Thu Feb 15 18:42:49 GMT 2007  Olly Betts <olly@survex.com>
 
 	* languages/compiler/generator.c,languages/steminternal.cc,
